--- a/src/pug/ui.pug
+++ b/src/pug/ui.pug
@@ -9,7 +9,7 @@ block header
 block wrapper
   .pt-4.pb-3.px-5.border-bottom
     .content
-      h1 h1 Заголовок первого уровня
+      h1(itemprop="name") h1(itemprop="name") Заголовок первого уровня
       h2 h2 Заголовок второго уровня
       h3 h3 Заголовок третьего уровня
       h4 h4 Заголовок четвёртого уровня
