--- a/src/pug/category-tires.pug
+++ b/src/pug/category-tires.pug
@@ -14,12 +14,21 @@ block filter
 
 block wrapper
   .wrapper
-    nav.pathway
-      a.pathway__link(href="#") Главная
-      a.pathway__link(href="#") Шины
-      a.pathway__current(href="#") Шины R18
+    ul.pathway(itemscope itemtype="http://schema.org/BreadcrumbList")
+      li(itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem")
+        a.pathway__link(href="#" itemprop="item")
+          span(itemprop="name") Главная
+          meta(itemprop="position" content="1")
+      li(itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem")
+        a.pathway__link(href="#" itemprop="item")
+          span(itemprop="name") Шины
+          meta(itemprop="position" content="2")
+      li(itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem")
+        a.pathway__current(href="#" itemprop="item")
+          span(itemprop="name") Шины R18
+          meta(itemprop="position" content="3")
     section.content
-      h1 Шины в Ростове-на-Дону
+      h1(itemprop="name") Шины в Ростове-на-Дону
     .category-counter.mb-4 14 840 товаров
     .row
       .col-xl-2.col-lg-3.mb-lg-4
