--- a/src/pug/filter-oil.pug
+++ b/src/pug/filter-oil.pug
@@ -14,11 +14,17 @@ block filter
 
 block wrapper
     .wrapper
-      nav.pathway
-        a.pathway__link(href="#") Главная
-        a.pathway__current(href="#") #{title}
+      ul.pathway(itemscope="" itemtype="http://schema.org/BreadcrumbList")
+        li(itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem")
+          a.pathway__link(href="#" itemprop="item")
+            span(itemprop="name") Главная
+            meta(itemprop="position" content="1")
+        li(itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem")
+          a.pathway__current(href="#" itemprop="item")
+            span(itemprop="name") #{title}
+            meta(itemprop="position" content="2")
       section.content
-        h1 #{title}
+        h1(itemprop="name") #{title}
       .category-counter.mb-4 1 840 товаров в 4 каталогах
       .row
         .col-xl-2.col-lg-3.mb-lg-4
