--- a/src/pug/main.pug
+++ b/src/pug/main.pug
@@ -409,7 +409,7 @@ block wrapper
               .col-xl-6.col-lg-8.col-md-6.d-flex.flex-column.justify-content-around.h-100
                 .feature.mb-5.mb-lg-4
                   .feature__value.font-weight-bold.color-theme-brand 10
-                    span.h1 лет
+                    spanh1 лет
                   .h4 на рынке продаж шин дисков и автотоваров.
                 .feature.mb-5.mb-lg-0
                   .feature__value.font-weight-bold.color-theme-brand &gt;2000
