--- a/src/pug/personal.pug
+++ b/src/pug/personal.pug
@@ -14,11 +14,17 @@ block filter
 
 block wrapper
   .wrapper
-    nav.pathway
-      a.pathway__link(href="#") Главная
-      a.pathway__current(href="#") #{title}
+    ul.pathway(itemscope="" itemtype="http://schema.org/BreadcrumbList")
+      li(itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem")
+        a.pathway__link(href="#" itemprop="item")
+          span(itemprop="name") Главная
+          meta(itemprop="position" content="1")
+      li(itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem")
+        a.pathway__current(href="#" itemprop="item")
+            span(itemprop="name") #{title}
+            meta(itemprop="position" content="2")
     section.content
-      h1 Личный кабинет
+      h1(itemprop="name") Личный кабинет
     .row.align-items-start
       .sidebar.col-xl-3.col-lg-4.mb-lg-4
         .filter.filter_sticky
