--- a/src/pug/service.pug
+++ b/src/pug/service.pug
@@ -11,12 +11,21 @@ block wrapper
     .wrapper.zi-2
       .promo__wrapper.d-flex.flex-column.justify-content-between.py-lg-5.py-md-4.py-3
         .promo__content.mb-3
-          nav.pathway
-            a.pathway__link(href="#") Главная
-            a.pathway__link(href="#") Услуги
-            a.pathway__current(href="#") Шиномонтаж
+          ul.pathway(itemscope="" itemtype="http://schema.org/BreadcrumbList")
+            li(itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem")
+              a.pathway__link(href="#" itemprop="item")
+                span(itemprop="name") Главная
+                meta(itemprop="position" content="1")
+            li(itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem")
+              a.pathway__link(href="#" itemprop="item")
+                span(itemprop="name") Услуги
+                meta(itemprop="position" content="2")
+            li(itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem")
+              a.pathway__current(href="#" itemprop="item")
+                span(itemprop="name") Шиномонтаж
+                meta(itemprop="position" content="3")
           section.content
-            h1 Шиномонтаж в Ростове-на-Дону
+            h1(itemprop="name") Шиномонтаж в Ростове-на-Дону
             .h4 Хватит стоять в очередях,
               br
               | запишитесь прямо сейчас:
@@ -36,15 +45,15 @@ block wrapper
               +icon('arrow-next')
           .swiper-wrapper
             .swiper-slide.px-3
-              .icon-rounded.h1.d-flex.align-items-center.justify-content-center.color-theme-brand.bg-theme-light.mb-3
+              .icon-rounded.h2.d-flex.align-items-center.justify-content-center.color-theme-brand.bg-theme-light.mb-3
                 +icon('scales')
               p Уменьшение срока службы подвески. Неточная или не качественная балансировка может привести к поломке всей ходовой. При некачественной балансировке, неверно выбранный груз или неверном его креплении на диске в процессе эксплуатации груз может слететь.
             .swiper-slide.px-3
-              .icon-rounded.h1.d-flex.align-items-center.justify-content-center.color-theme-brand.bg-theme-light.mb-3
+              .icon-rounded.h2.d-flex.align-items-center.justify-content-center.color-theme-brand.bg-theme-light.mb-3
                 +icon('target')
               p Неравномерная изношенность покрышек. При неверной балансировке износ шин происходит намного быстрее, что может привести не только к преждевременной замены покрышки, но и к возникновению аварийной ситуации на дороге.
             .swiper-slide.px-3
-              .icon-rounded.h1.d-flex.align-items-center.justify-content-center.color-theme-brand.bg-theme-light.mb-3
+              .icon-rounded.h2.d-flex.align-items-center.justify-content-center.color-theme-brand.bg-theme-light.mb-3
                 +icon('attention')
               p Безопасность на дороге. Дороже этого ничего быть не может. Сэкономленные 2 часа на смену комплекта шин у непрофессионалов не стоят Вашей безопасности и безопасности Ваших близких.
 
@@ -64,7 +73,7 @@ block wrapper
           .contacts
             a.contacts__item.d-flex.align-items-center.h3.font-weight-bold.text-nowrap.color-theme-brand(href="tel:+73652777068")
               +icon('phone','contacts__icon h3 color-theme-brand mr-2')
-              span.contacts__item-title +7 (365) 277-70-68
+              span.contacts__item-title +7 (863) 22-99-99-4
     .mb-3
       .h2.font-weight-bold.mb-4 Отзывы
       .slides.slides_reviews.swiper-container.pt-1.pb-4.px-0.mx-0
@@ -73,7 +82,7 @@ block wrapper
           .swiper-slide
             .review.review_slide.h-100.p-3
               .review__header.d-flex.align-items-center.mb-3
-                .icon-rounded.h1.d-flex.align-items-center.justify-content-center.color-theme-brand.bg-theme-light.mr-3
+                .icon-rounded.h2.d-flex.align-items-center.justify-content-center.color-theme-brand.bg-theme-light.mr-3
                   +icon('emoji')
                 .review__meta.flex-grow-1
                   .review__title.d-block.h4.color-theme-brand Анатолий Ефимов
@@ -82,7 +91,7 @@ block wrapper
           .swiper-slide
             .review.review_slide.h-100.p-3
               .review__header.d-flex.align-items-center.mb-3
-                .icon-rounded.h1.d-flex.align-items-center.justify-content-center.color-theme-brand.bg-theme-light.mr-3
+                .icon-rounded.h2.d-flex.align-items-center.justify-content-center.color-theme-brand.bg-theme-light.mr-3
                   +icon('emoji')
                 .review__meta.flex-grow-1
                   .review__title.d-block.h4.color-theme-brand Павел Антипин
@@ -91,7 +100,7 @@ block wrapper
           .swiper-slide
             .review.review_slide.h-100.p-3
               .review__header.d-flex.align-items-center.mb-3
-                .icon-rounded.h1.d-flex.align-items-center.justify-content-center.color-theme-brand.bg-theme-light.mr-3
+                .icon-rounded.h2.d-flex.align-items-center.justify-content-center.color-theme-brand.bg-theme-light.mr-3
                   +icon('emoji')
                 .review__meta.flex-grow-1
                   .review__title.d-block.h4.color-theme-brand Костя Боярский
@@ -100,7 +109,7 @@ block wrapper
           .swiper-slide
             .review.review_slide.h-100.p-3
               .review__header.d-flex.align-items-center.mb-3
-                .icon-rounded.h1.d-flex.align-items-center.justify-content-center.color-theme-brand.bg-theme-light.mr-3
+                .icon-rounded.h2.d-flex.align-items-center.justify-content-center.color-theme-brand.bg-theme-light.mr-3
                   +icon('emoji')
                 .review__meta.flex-grow-1
                   .review__title.d-block.h4.color-theme-brand Иван Трактиров
@@ -109,7 +118,7 @@ block wrapper
           .swiper-slide
             .review.review_slide.h-100.p-3
               .review__header.d-flex.align-items-center.mb-3
-                .icon-rounded.h1.d-flex.align-items-center.justify-content-center.color-theme-brand.bg-theme-light.mr-3
+                .icon-rounded.h2.d-flex.align-items-center.justify-content-center.color-theme-brand.bg-theme-light.mr-3
                   +icon('emoji')
                 .review__meta.flex-grow-1
                   .review__title.d-block.h4.color-theme-brand Анатолий Ефимов
@@ -145,7 +154,7 @@ block wrapper
   .wrapper
     include base/callorder.pug
 
-    .content.content_expanded.mb-5
+    .content.content_expanded.mb-5(itemprop="text")
       include base/content.pug
       .content__footer
         button.readmore.readmore_btn(type="button")
