--- a/src/pug/subcategory-tires-tile.pug
+++ b/src/pug/subcategory-tires-tile.pug
@@ -14,12 +14,21 @@ block filter
 
 block wrapper
     .wrapper
-      nav.pathway
-        a.pathway__link(href="#") Главная
-        a.pathway__link(href="#") Шины
-        a.pathway__current(href="#") Шины R18
+      ul.pathway(itemscope="" itemtype="http://schema.org/BreadcrumbList")
+        li(itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem")
+          a.pathway__link(href="#" itemprop="item")
+            span(itemprop="name") Главная
+            meta(itemprop="position" content="1")
+        li(itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem")
+          a.pathway__link(href="#" itemprop="item")
+            span(itemprop="name") Шины
+            meta(itemprop="position" content="2")
+        li(itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem")
+          a.pathway__current(href="#" itemprop="item")
+            span(itemprop="name") Шины R18
+            meta(itemprop="position" content="3")
       section.content
-        h1 Купить шины CORDIANT в Ростове-на-Дону
+        h1(itemprop="name") Купить шины CORDIANT в Ростове-на-Дону
       .category-counter.mb-4 1 840 товаров
       .brand.d-flex.flex-wrap.bg-white.h-auto.p-3.mb-3
         .col-xl-2.col-lg-3.d-flex.flex-column.align-items-center.justify-content-center.mb-3.mb-lg-0
@@ -83,7 +92,7 @@ block wrapper
 
       include base/links.pug
 
-      .content.content_expanded.mb-5
+      .content.content_expanded.mb-5(itemprop="text")
         include base/content.pug
         .content__footer
           button.readmore.readmore_btn(type="button")
