--- a/src/pug/subcategory.pug
+++ b/src/pug/subcategory.pug
@@ -17,12 +17,21 @@ block filter
 
 block wrapper
   .wrapper
-    nav.pathway
-      a.pathway__link(href="#") Главная
-      a.pathway__link(href="#") Автотовары
-      a.pathway__current(href="#") Авточехлы
+    ul.pathway(itemscope="" itemtype="http://schema.org/BreadcrumbList")
+      li(itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem")
+        a.pathway__link(href="#" itemprop="item")
+          span(itemprop="name") Главная
+          meta(itemprop="position" content="1")
+      li(itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem")
+        a.pathway__link(href="#" itemprop="item")
+          span(itemprop="name") Автотовары
+          meta(itemprop="position" content="2")
+      li(itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem")
+        a.pathway__current(href="#" itemprop="item")
+          span(itemprop="name") Авточехлы
+          meta(itemprop="position" content="3")
     section.content
-      h1 Авточехлы
+      h1(itemprop="name") Авточехлы
     .category-counter.mb-4 1 840 товаров
     .row
       .col-xl-2.col-lg-3.mb-lg-4
@@ -277,7 +286,7 @@ block wrapper
 
     include base/links.pug
 
-    .content.content_expanded.mb-5
+    .content.content_expanded.mb-5(itemprop="text")
       include base/content.pug
       .content__footer
         button.readmore.readmore_btn(type="button")
