--- a/src/scss/tpl/_pathway.scss
+++ b/src/scss/tpl/_pathway.scss
@@ -1,5 +1,7 @@
 .pathway {
   @include h6;
+  display: flex;
+  flex-wrap: wrap;
 
   @include media-breakpoint-up(lg) {
     margin: 0 0 1.75rem;
@@ -11,15 +13,19 @@
 }
 
 .pathway__link {
-  @include inline-block;
+  display: block;
   margin: 0 .25rem 0 0;
 
   &:after {
     content: '/';
     margin: 0 0 0 .25rem;
   }
+
+  &:hover {
+    color: $color__brand;
+  }
 }
 
 .pathway__current {
-  @include inline-block;
+  display: block;
 }
